# pyweber

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  Procfile  README.md  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: 02_feature_request.yml  config.yml  documentation_improvement.yml
.github/workflows/: tests.yml
.pyweber/: config.toml
.pyweber/cert/: pyweber-localhost-127.0.0.1-key.pem  pyweber-localhost-127.0.0.1.pem
docs/: changelog.md  cli.md  documentation.md  element.md  environment.md  events.md  examples.md  index.md  installation.md  router.md  template.md  window.md
docs/browser/: location.md  orientation.md  screen.md  window.md
docs/core/: headers.md  pyweber.md  request.md  response.md
docs/forms/: field.md  fieldstorage.md  file.md
docs/guides/: components.md  deployment.md  element-model.md  file-streaming.md  reactivity.md  routing-advanced.md
docs/interaction/: confirm.md  events.md  prompt.md
docs/routing/: redirectroute.md  route.md  routemanager.md
docs/storage/: basestorage.md  localstorage.md  sessionstorage.md
docs/templates/: contentresult.md  stateresult.md  templateresult.md
docs/ui/: element.md  template.md
pyweber/: __init__.py
pyweber/admin/: index.html
pyweber/cli/: __init__.py  commands.py
pyweber/components/: __init__.py  components.py  form.py  general.py  input.py
pyweber/config/: config.py
pyweber/connection/: __init__.py  http.py  reload.py  selector.py  session.py  websocket.py
pyweber/content_type/: content_types.py
pyweber/core/: __init__.py  base_element.py  element.py  elements.py  events.py  template.py  window.py
pyweber/elements/: elements.py
pyweber/events/: events.py
pyweber/globals/: globals.py
pyweber/models/: __init__.py  context.py  cookies.py  create_app.py  element.py  error_pages.py  field.py  field_storage.py  file.py  file_stream.py  handoff.py  headers.py  middleware.py  model.py  openapi.py  request.py  response.py  routes.py  run.py  strem_stats.py  task_manager.py  template_diff.py  ws_message.py
pyweber/pyweber/: __init__.py  pyweber.py
pyweber/pyweber_cli/: pyweber_cli.py
pyweber/reload_server/: reload_server.py
pyweber/router/: __init__.py  request.py  response.py  router.py
pyweber/server/: __init__.py  clientsesstion.py  reload.py  server.py  websocket.py
pyweber/static/: .gitignore  config.json  config.toml  css.css  css.py  docs.html  html.html  html.py  html401.html  html404.html  html404.py  html500.html  js.js  js.py  loading.html  main.py  pyweber.css  update.py
pyweber/static_files/: static_files.py
pyweber/template_codes/: template_codes.py
pyweber/templates/: template.py
pyweber/utils/: __init__.py  async_utils.py  defaults.py  events.py  exceptions.py  load.py  loads.py  types.py  utils.py
tests/: clear_pycache.py  conftest.py  helpers.py  test_config.py  test_context.py  test_cookies.py  test_core_element.py  test_exceptions.py  test_loads.py  test_openapi_processor.py  test_public_api.py  test_pyweber.py  test_response.py  test_template_diff.py  test_utils.py
(+42 files in other folders)
