[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyweber"
version = "0.9.93"
description = "A lightweight Python framework for building and managing web applications."
readme = "README.md"
authors = [
    { name = "DevPythonMZ", email = "zoidycine@gmail.com" }
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "websockets",
    "watchdog",
    "lxml",
    "requests",
    "toml",
    "questionary"
]

[project.urls]
Documentation = "https://pyweber.readthedocs.io/en/latest"
Source = "https://github.com/pyweber/pyweber"
Tracker = "https://github.com/pyweber/pyweber/issues"
PyPI = "https://pypi.org/project/pyweber/"
YouTube = "https://youtube.com/@devpythonMZ"

[project.scripts]
pyweber = "pyweber.cli.commands:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyweber*"]

[tool.setuptools.package-data]
pyweber = ["static/**/*", "admin/**/*"]