[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyweber"
version = "1.1.0.dev20260115"
description = "A lightweight Python framework for building and managing web applications."
readme = "README.md"
authors = [
    { name = "DevPythonMZ", email = "pypi.dev@gmail.com" }
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "websockets",
    "watchdog",
    "lxml",
    "toml",
    "questionary",
    "qrcode[pil]"
]

[project.urls]
Documentation = "https://pyweber.dev/"
Source = "https://github.com/pyweber/pyweber"
Tracker = "https://github.com/pyweber/pyweber/issues"
PyPI = "https://pypi.org/project/pyweber/"
YouTube = "https://youtube.com/@devpythonMZ"
Examples = "https://github.com/pyweber-examples"

[project.scripts]
pyweber = "pyweber.cli.commands:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyweber*"]

[tool.setuptools.package-data]
pyweber = ["static/**/*", "admin/**/*"]