[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyweber"
version = "1.3.0.dev20260609"
description = "A lightweight Python framework for building and managing web applications."
readme = "README.md"
authors = [{ name = "DevPythonMZ", email = "pypi.dev@gmail.com" }]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["watchdog", "lxml", "toml", "questionary", "qrcode[pil]"]
[project.urls]
Documentation = "https://pyweber.dev/"
Source = "https://github.com/pyweber/pyweber"
Tracker = "https://github.com/pyweber/pyweber/issues"
PyPI = "https://pypi.org/project/pyweber/"
YouTube = "https://youtube.com/@devpythonMZ"
Examples = "https://github.com/pyweber-examples"

[project.scripts]
pyweber = "pyweber.cli.commands:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyweber*"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-asyncio"]

[tool.setuptools.package-data]
pyweber = ["static/**/*", "admin/**/*"]

[tool.coverage.run]
omit = ["pyweber/cli/commands.py"]

[tool.coverage.report]
fail_under = 84
show_missing = true
